--- a/src/djaport/templates/report.html
+++ b/src/djaport/templates/report.html
@@ -191,7 +191,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>HMS Backend Test Report</h1>
+        <h1>Test Report</h1>
         <p>{{ results.start_time }}</p>
     </div>
     
